# WeightAlign

./: CMakeLists.txt  README.md
src/: Query.hpp  build.cpp  query_main.cpp
src/builder/: AbstractBuilder.hpp  AllAlignBuilder.hpp  MonotonicBuilder.hpp  SingleColumnBuilder.hpp
src/util/: IO.hpp  cw.hpp  hasher.hpp  index_utils.hpp  splay.hpp  tf_strategy.hpp  util.hpp
